--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         <!-- Profile Picture -->
         <div class="profile-pic">
-          <img src="Farohunbi Image.JPG" alt="Profile Picture of Farohunbi" />
+          <img src="my_image.jpg" alt="Profile Picture of Farohunbi" />
         </div>
 
         <p>
@@ -58,12 +58,42 @@
       <section id="projects">
         <h2>Projects</h2>
         <div class="project-card">
-          <h3>Sales Forecasting Model</h3>
-          <p>
-            Built a predictive model using Python to forecast sales with 90%
-            accuracy.
+          <h3>Customer Churn Prediction (BCG Virtual Experience)</h3>
+          <p class="project-desc">
+            As part of the BCG Data Science & Advanced Analytics Virtual
+            Experience, I developed a customer churn prediction framework for
+            PowerCo, a major European energy utility.
+            <span class="more-text">
+              The project focused on analyzing SME customer price sensitivity to
+              understand churn drivers and recommend data-driven retention
+              strategies. I conducted exploratory data analysis on historical
+              customer and pricing data, engineered features to capture signals
+              such as price fluctuations, and built a Random Forest model to
+              predict churn probabilities. The analysis confirmed that price
+              sensitivity was strongly correlated with customer attrition, and
+              the predictive model provided a reliable way to identify at-risk
+              customers. Based on these insights, I evaluated a 20% discount
+              strategy that could effectively retain high-propensity churn
+              customers, providing actionable recommendations to minimize
+              revenue loss. This project combined technical modeling with
+              business framing, translating analytical findings into financial
+              impact and practical strategies for decision-making.
+            </span>
           </p>
+
+          <!-- Read More Button -->
+          <button class="read-more-btn">Read More</button>
+
+          <!-- Tech Stack -->
+          <div class="tech-stack">
+            <span class="badge">Python</span>
+            <span class="badge">Pandas</span>
+            <span class="badge">Scikit-learn</span>
+            <span class="badge">Random Forest</span>
+            <span class="badge">Data Visualization</span>
+          </div>
         </div>
+
         <div class="project-card">
           <h3>Customer Segmentation</h3>
           <p>
