--- a/index.html
+++ b/index.html
@@ -84,6 +84,17 @@
           <!-- Read More Button -->
           <button class="read-more-btn">Read More</button>
 
+          <!-- GitHub Link -->
+          <div class="project-links">
+            <a
+              href="https://github.com/Farohunbitoyin/BCG-Data-Science-Advanced-Analytics-Virtual-Experience-Program"
+              target="_blank"
+              class="btn-link"
+            >
+              🔗 View Full Project on GitHub
+            </a>
+          </div>
+
           <!-- Tech Stack -->
           <div class="tech-stack">
             <span class="badge">Python</span>
@@ -93,9 +104,352 @@
             <span class="badge">Data Visualization</span>
           </div>
         </div>
+        <div class="project-card">
+          <h3>Ideaspice HR Analytics Project</h3>
+          <p class="project-desc">
+            In the Ideaspice HR Analytics Project, I developed a predictive
+            framework to identify the key factors influencing employee turnover
+            and to recommend actionable retention strategies. Using structured
+            employee data, I performed exploratory analysis to uncover
+            significant patterns, including the impact of monthly income,
+            overtime, distance from home, and age on attrition risk.
+            <span class="more-text">
+              The analysis also highlighted the influence of line managers, with
+              notable turnover occurring shortly after managerial changes. The
+              project combined statistical insights with predictive modeling,
+              where Logistic Regression and Random Forest were trained,
+              optimized, and evaluated using metrics such as ROC AUC and
+              confusion matrices. Employees were categorized into low, medium,
+              and high-risk groups based on predicted probabilities, forming the
+              basis of a structured “Retention Plan.” Recommendations included
+              competitive wage benchmarking, improved workload management,
+              targeted manager training, and support for younger employees
+              through career development opportunities. These insights
+              translated into a data-driven approach that can help HR leaders
+              proactively reduce attrition and strengthen workforce stability.
+            </span>
+          </p>
+
+          <!-- Read More Button -->
+          <button class="read-more-btn">Read More</button>
+
+          <!-- Tech Stack -->
+          <div class="tech-stack">
+            <span class="badge">Python</span>
+            <span class="badge">Pandas</span>
+            <span class="badge">Data Visualization</span>
+            <span class="badge">Logistic Regression</span>
+            <span class="badge">Random Forest</span>
+            <span class="badge">ROC AUC</span>
+            <span class="badge">Confusion Matrix</span>
+            <span class="badge">HR Analytics</span>
+          </div>
+
+          <!-- GitHub Link -->
+          <div class="project-links">
+            <a
+              href="https://github.com/Farohunbitoyin/Ideaspice-HR-Project"
+              target="_blank"
+              class="btn-link"
+            >
+              🔗 View Full Project on GitHub
+            </a>
+          </div>
+        </div>
+        <div class="project-card">
+          <h3>Bank Customer Churn Analysis</h3>
+          <p class="project-desc">
+            In this Bank Customer Churn Analysis project, I explored a dataset
+            of 10,000 customers across three countries to uncover patterns
+            behind customer retention and attrition. Exploratory analysis showed
+            that 79.6% of customers were retained while 20.4% had churned,
+            highlighting a significant challenge for profitability. Numerical
+            features such as Age, Balance, and Credit Score were binned and
+            analyzed to better capture behavioral differences between retained
+            and churned groups.
+            <span class="more-text">
+              To build predictive capability, I applied Decision Tree and Random
+              Forest classifiers, using GridSearchCV and cross-validation for
+              model optimization. A critical issue of data leakage was
+              identified and resolved, which ensured trustworthy evaluation
+              results. The final Random Forest model achieved strong
+              generalizability, with 97% recall for retained customers and 47%
+              recall for churned customers, supported by insights from feature
+              importance analysis. Recommendations included hyperparameter
+              tuning, feature engineering, and class imbalance handling
+              techniques to further improve churn sensitivity and create a
+              deployable pipeline for production.
+              <br /><br />
+              <strong>Impact Statement:</strong>
+              Built a churn prediction model for a bank’s 10,000 customers,
+              uncovering key behavioral drivers of attrition and delivering
+              actionable insights to improve customer retention strategies.
+            </span>
+          </p>
+
+          <!-- Read More Button -->
+          <button class="read-more-btn">Read More</button>
+
+          <!-- Tech Stack -->
+          <div class="tech-stack">
+            <span class="badge">Python</span>
+            <span class="badge">Pandas</span>
+            <span class="badge">Data Visualization</span>
+            <span class="badge">Decision Tree</span>
+            <span class="badge">Random Forest</span>
+            <span class="badge">GridSearchCV</span>
+            <span class="badge">Cross-validation</span>
+            <span class="badge">Feature Engineering</span>
+            <span class="badge">Hyperparameter Tuning</span>
+            <span class="badge">Class Imbalance Handling</span>
+          </div>
+
+          <!-- GitHub Link -->
+          <div class="project-links">
+            <a
+              href="https://github.com/Farohunbitoyin/Loan-Defaulters-Analysis"
+              target="_blank"
+              class="btn-link"
+            >
+              🔗 View Full Project on GitHub
+            </a>
+          </div>
+        </div>
+        <div class="project-card">
+          <h3>Time Series Forecasting: Daily Minimum Temperatures</h3>
+          <p class="project-desc">
+            In this Time Series Forecasting project, I analyzed ten years of
+            Australia’s daily minimum temperature data to build predictive
+            models for temperature forecasting. The analysis began with
+            exploring the temporal structure of the data, checking for
+            stationarity, seasonality, trends, and autocorrelation using
+            statistical tests and visualizations. A baseline one-step prediction
+            model was established, followed by more advanced approaches
+            including Autoregression (AR), ARIMA, and Seasonal ARIMA (SARIMA)
+            models.
+            <span class="more-text">
+              To strengthen the analysis, I also experimented with resampling
+              techniques such as downsampling and upsampling to better
+              understand long-term patterns. Decomposition methods, both
+              additive and multiplicative, were applied to separate trend,
+              seasonality, and residual components. Using a dummy dataset of
+              U.S. airline monthly aircraft miles flown, I further demonstrated
+              techniques such as differencing, persistence modeling, moving
+              averages, and walk-forward validation to illustrate model
+              robustness.
+              <br /><br />
+              The final SARIMA model showed strong performance in capturing both
+              trend and seasonality, making it well-suited for forecasting daily
+              temperature values. Recommendations included hyperparameter tuning
+              for ARIMA-family models, extending walk-forward validation for
+              more realistic evaluation, and exploring advanced deep learning
+              approaches such as LSTMs for future work.
+            </span>
+          </p>
+
+          <!-- Read More Button -->
+          <button class="read-more-btn">Read More</button>
+
+          <!-- Tech Stack -->
+          <div class="tech-stack">
+            <span class="badge">Python</span>
+            <span class="badge">Pandas</span>
+            <span class="badge">NumPy</span>
+            <span class="badge">Matplotlib</span>
+            <span class="badge">Seaborn</span>
+            <span class="badge">Plotly</span>
+            <span class="badge">Scikit-learn</span>
+            <span class="badge">Statsmodels</span>
+            <span class="badge">AR</span>
+            <span class="badge">ARIMA</span>
+            <span class="badge">SARIMA</span>
+            <span class="badge">Decomposition</span>
+            <span class="badge">GridSearchCV</span>
+            <span class="badge">Cross-validation</span>
+            <span class="badge">Time Series Analysis</span>
+            <span class="badge">Jupyter Notebook</span>
+          </div>
+
+          <!-- GitHub Link -->
+          <div class="project-links">
+            <a
+              href="https://github.com/Farohunbitoyin/time-series-analysis"
+              target="_blank"
+              class="btn-link"
+            >
+              🔗 View Full Project on GitHub
+            </a>
+          </div>
+        </div>
 
         <div class="project-card">
-          <h3>Customer Segmentation</h3>
+          <h3>YouTube NLP Sentiment Analysis</h3>
+          <p class="project-desc">
+            In this YouTube NLP project, I performed sentiment analysis on user
+            comments to uncover audience perceptions and engagement patterns.
+            Comments were preprocessed by handling missing values and applying
+            the TextBlob library to extract polarity and subjectivity scores,
+            categorizing each comment into positive, negative, or neutral
+            sentiments.
+            <span class="more-text">
+              To make the insights more actionable, the most positive and most
+              negative comments were highlighted with their corresponding
+              sentiment scores. The sentiment distribution was visualized
+              through bar and pie charts, while WordClouds were generated for
+              both positive and negative comments to reveal dominant themes in
+              user feedback.
+              <br /><br />
+              In addition to comment-level analysis, engagement metrics were
+              explored by analyzing trending tags, and a regression analysis
+              between views and likes provided further insights into content
+              performance. This end-to-end workflow combined natural language
+              processing with visualization to generate meaningful insights into
+              how viewers interact with content on YouTube.
+              <br /><br />
+              <strong>Impact:</strong> Built an NLP pipeline to classify YouTube
+              comments by sentiment, visualize audience feedback, and uncover
+              engagement patterns through text and trend analysis.
+            </span>
+          </p>
+
+          <!-- Read More Button -->
+          <button class="read-more-btn">Read More</button>
+
+          <!-- Tech Stack -->
+          <div class="tech-stack">
+            <span class="badge">Python</span>
+            <span class="badge">Pandas</span>
+            <span class="badge">NumPy</span>
+            <span class="badge">TextBlob</span>
+            <span class="badge">Matplotlib</span>
+            <span class="badge">Seaborn</span>
+            <span class="badge">WordCloud</span>
+            <span class="badge">NLP</span>
+            <span class="badge">Regression Analysis</span>
+            <span class="badge">Data Visualization</span>
+            <span class="badge">Jupyter Notebook</span>
+          </div>
+
+          <!-- GitHub Link -->
+          <div class="project-links">
+            <a
+              href="https://github.com/Farohunbitoyin/YouTube-NLP"
+              target="_blank"
+              class="btn-link"
+            >
+              🔗 View Full Project on GitHub
+            </a>
+          </div>
+        </div>
+
+        <div class="project-card">
+          <h3>Daily Bike Rentals Prediction</h3>
+          <p class="project-desc">
+            This project aimed to predict the number of daily bike rentals using
+            environmental and seasonal factors. The dataset contained 731 daily
+            records, and exploratory analysis highlighted key temporal,
+            weather-related, and categorical influences on rental demand.
+            <span class="more-text">
+              A Lasso Regression model was implemented, first on raw data and
+              later within a pipeline that standardized numerical variables and
+              one-hot encoded categorical features for consistency and
+              scalability. Model evaluation using MSE, RMSE, and R² confirmed
+              the pipeline’s effectiveness, resulting in more accurate and
+              interpretable predictions. <br /><br />
+              The final model provides a reliable framework for forecasting
+              rental demand based on weather and calendar conditions.
+            </span>
+          </p>
+
+          <!-- Read More Button -->
+          <button class="read-more-btn">Read More</button>
+
+          <!-- Tech Stack -->
+          <div class="tech-stack">
+            <span class="badge">Python</span>
+            <span class="badge">Pandas</span>
+            <span class="badge">NumPy</span>
+            <span class="badge">Scikit-learn</span>
+            <span class="badge">Matplotlib</span>
+            <span class="badge">Seaborn</span>
+            <span class="badge">Lasso Regression</span>
+            <span class="badge">Pipelines</span>
+            <span class="badge">ColumnTransformer</span>
+          </div>
+
+          <!-- GitHub Link -->
+          <div class="project-links">
+            <a
+              href="https://github.com/Farohunbitoyin/daily-bike-rentals"
+              target="_blank"
+              class="btn-link"
+            >
+              🔗 View Full Project on GitHub
+            </a>
+          </div>
+        </div>
+        <div class="project-card">
+          <h3>Heart Attack Analysis Project</h3>
+          <p class="project-desc">
+            The goal of this project was to predict the likelihood of heart
+            attacks using patient health records and to derive clinically
+            relevant insights. Exploratory data analysis involved visualizing
+            categorical and continuous variables, identifying and removing
+            outliers, and addressing target imbalance. Statistical insights
+            highlighted gender, chest pain, ECG results, and fasting blood sugar
+            as critical features influencing heart attack risk.
+            <span class="more-text">
+              Multiple models were trained and compared, including Logistic
+              Regression, Support Vector Classification, Random Forest, XGBoost,
+              and K-Nearest Neighbors (KNN). Data preprocessing steps included
+              scaling and transformation to ensure optimal model performance.
+              While Support Vector Classification produced the highest accuracy,
+              simpler models such as Logistic Regression and KNN were preferred
+              due to their interpretability and more realistic accuracy range
+              (72–82%). Hyperparameter tuning with GridSearchCV further
+              optimized results.
+              <br /><br />
+              The project provided actionable recommendations, such as targeted
+              screening for males, sensitization about chest pain symptoms,
+              routine home monitoring of vitals, annual ECG tests for high-risk
+              groups, and lifestyle interventions to control fasting blood
+              sugar.
+            </span>
+          </p>
+
+          <!-- Read More Button -->
+          <button class="read-more-btn">Read More</button>
+
+          <!-- Tech Stack -->
+          <div class="tech-stack">
+            <span class="badge">Python</span>
+            <span class="badge">Pandas</span>
+            <span class="badge">NumPy</span>
+            <span class="badge">Scikit-learn</span>
+            <span class="badge">Matplotlib</span>
+            <span class="badge">Seaborn</span>
+            <span class="badge">XGBoost</span>
+            <span class="badge">Logistic Regression</span>
+            <span class="badge">KNN</span>
+            <span class="badge">SVC</span>
+            <span class="badge">Random Forest</span>
+            <span class="badge">GridSearchCV</span>
+          </div>
+
+          <!-- GitHub Link -->
+          <div class="project-links">
+            <a
+              href="https://github.com/Farohunbitoyin/heart-attack-analysis"
+              target="_blank"
+              class="btn-link"
+            >
+              🔗 View Full Project on GitHub
+            </a>
+          </div>
+        </div>
+
+        <div class="project-card">
+          <h3>Customer Segmentation - In Progress</h3>
           <p>
             Applied clustering techniques to identify customer groups and
             improve targeting.
