--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Data Science Portfolio</title>
     <link rel="stylesheet" href="style.css" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+
     <!-- Font Awesome for icons -->
     <link
       rel="stylesheet"
@@ -502,13 +506,13 @@
       <p>&copy; 2025 My Portfolio | Designed by Me</p>
     </footer>
 
-    <!-- ===== Scripts ===== -->
-    <script src="script.js"></script>
-
     <!-- Scroll Progress Bar -->
     <div id="scroll-progress"></div>
 
     <!-- Back to Top Button -->
     <button id="back-to-top"><i class="fas fa-arrow-up"></i></button>
+
+    <!-- ===== Scripts ===== -->
+    <script src="script.js"></script>
   </body>
 </html>
